Add links to list of posts

--- a/frontend/src/css/app.scss
+++ b/frontend/src/css/app.scss
@@ -9,3 +9,8 @@
   max-height: 375px;
   width: 100%;
 }
+
+.a, a:link, a:visited, a:hover, a:focus, a:active {
+  text-decoration: none;
+  color: inherit;
+}
