Added custom width classes
Added custom width classes

--- a/frontend/src/css/app.scss
+++ b/frontend/src/css/app.scss
@@ -14,3 +14,47 @@
   text-decoration: none;
   color: inherit;
 }
+
+.cstm-w-100 {
+  width: 100px;
+}
+
+.cstm-w-150 {
+  width: 150px;
+}
+
+.cstm-w-200 {
+  width: 200px;
+}
+
+.cstm-w-250 {
+  width: 250px;
+}
+
+.cstm-w-300 {
+  width: 300px;
+}
+
+.cstm-w-full {
+  width: 100%;
+}
+
+.cstm-w-qtr {
+  width: 25%;
+}
+
+.cstm-w-half {
+  width: 50%;
+}
+
+.cstm-w-3rd {
+  width: 33%;
+}
+
+.cstm-w-2-3rd {
+  width: 66%;
+}
+
+.cstm-w-3-qtr {
+  width: 75%;
+}
