Moved Filter to Dialog
Moved filter to dialog.
Updated theme colors.

--- a/frontend/src/css/quasar.variables.scss
+++ b/frontend/src/css/quasar.variables.scss
@@ -12,14 +12,17 @@
 // to match your app's branding.
 // Tip: Use the "Theme Builder" on Quasar's documentation website.
 
-$primary   : #E98C1D;
-$secondary : #26A69A;
-$accent    : #9C27B0;
+// $primary   : #E98C1D;
+$primary : #e47d00;
+// $primary   : #FD7014;
+$secondary : #003865;
+// $secondary : #0868AB;
+$accent    : #FF4301;
 
 $dark      : #1D1D1D;
 $dark-page : #121212;
 
-$positive  : #21BA45;
+$positive  : #3CCF4E;
 $negative  : #C10015;
-$info      : #31CCEC;
-$warning   : #F2C037;
+$info      : #0A91AB;
+$warning   : #7D1935;
