Updates to include contact form

--- a/frontend/src/css/quasar.variables.scss
+++ b/frontend/src/css/quasar.variables.scss
@@ -23,7 +23,8 @@ $accent    : #e44c0f;
 // $accent : linear-gradient(135deg, #E98C1D 0%, #C72800 100%);
 
 $dark      : #1D1D1D;
-$dark-page : #121212;
+$dark-page : #242424;
+// $dark-page : #313131;
 
 // $positive  : #019F02;
 $positive  : #198516;
